api추가하여 작품 데이터 장고에서 보내주는 방식으로 수정 시작, 전반적인 ui변경. 대회관련 내용 추가.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,8 +8,6 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-draggable": "^4.4.3",
-    "react-draggable-slider": "^0.1.6",
     "react-scripts": "3.4.1",
     "styled-components": "^5.1.1"
   },
@@ -22,6 +20,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "homepage": ".",
   "browserslist": {
     "production": [
       ">0.2%",
